--- a/html/index.html
+++ b/html/index.html
@@ -60,9 +60,11 @@
         </div>
         <div class="column"></div>
         <span class="line"></span>
-        <div class="small-column">
-          <h2>Popular articles</h2>
-          <ul class="popular"></ul>
+        <div class="small-wrap">
+          <div class="small-column">
+            <h2>Popular articles</h2>
+            <ul class="popular"></ul>
+          </div>
         </div>
       </div>
     </div>
